# cortx

./: .gitignore  .prettierignore  .stylelintrc.json  CHANGELOG.md  CLAUDE.md  README.ko.md  README.md  TROUBLESHOOTING.md  bundle-budget.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  setup.sh  stryker.config.json  vite.config.ts
.claude/: settings.json  settings.local.json
.github/: dependabot.yml
claudedocs/: pipeline-mvp-prototype.html
docs/: auto-update.md  cortx-pipeline-manual.md  getting-started.md  pipeline-customization.md
e2e/: dnd-utils.spec.ts  (+10 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_fts_search.sql  003_telemetry.sql  004_project_metadata.sql
src-tauri/src/: lib.rs  pty.rs  types.rs
src-tauri/src/commands/: claude.rs  git.rs  mcp.rs  mod.rs  notion_api.rs  oauth.rs  scan.rs  secrets.rs  shell.rs
src-tauri/src/commands/claude/: builtin_pipelines.rs  builtin_skills.rs  custom_pipeline.rs  mod.rs  pty_proxy.rs  settings.rs  slash.rs  spawn.rs  window.rs
src-tauri/src/commands/mcp/: discovery.rs  json_io.rs  mod.rs  mutate.rs  toggle.rs
src-tauri/src/commands/mcp/discovery/: builtin.rs  global.rs  mod.rs  project.rs
src-tauri/src/commands/scan/: build_commands.rs  context_md.rs  fallback.rs  grader.rs  mod.rs  orchestrator.rs  scaffold.rs  tech_stack.rs  time_utils.rs
src-tauri/src/pty/: claude_command.rs  mock_claude.rs  mod.rs  secure_temp.rs  session.rs  spawn.rs
(+400 files in other folders)
